updated footer and links

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -3,7 +3,7 @@
 .menu {
     width: 300px;
     height: 100vh;
-    background-color: #b9936c;
+    background-color: #82b74b;
     position: fixed;
     top: 0;
     right: -300px;
