--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,3 +1,26 @@
-.footer{
+.footer {
     background-color: #c4b7a6;
+    color: black;
+
+    h1 {
+        color: #e6e2d3;
+        font-weight: 300;
+        font-size: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        padding: 2%;
+        margin-top: 70px;
+
+        &:hover {
+            font-weight: 500;
+            background-color:#82b74b;
+            cursor: pointer;
+        }
+    }
+    a { 
+        text-decoration: none;
+        color: #e6e2d3;
+    }
 }
