--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,7 +4,7 @@
     width: 100%;
     height: 70px;
     background-color: $mainColor;
-    color: #b9936c;
+    color: #82b74b;
     position: fixed;
     top: 0;
     z-index: 3;
@@ -26,6 +26,7 @@
                 color: inherit;
                 margin-right: 30px;
                 font-weight: 600;
+                padding-left: 27px;
             }
 
             .itemContainer {
@@ -58,7 +59,7 @@
             span {
                 width: 100%;
                 height: 3px;
-                background-color: #b9936c;
+                background-color: #82b74b;
                 transform-origin: left;
                 transition: all 2s ease;
             }
@@ -66,7 +67,7 @@
     }
 
     &.active {
-        background-color: #b9936c;
+        background-color: #82b74b;
         color: $mainColor;
         font-weight: 400;
 
