--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -10,7 +10,7 @@
             width: 900px;
             height: 900px;
             margin-top: 150px;
-            background-color: crimson;
+            background-color: #82b74b;
             // border-radius: 50%;
             display: flex;
             align-items: center;
@@ -26,6 +26,54 @@
 
     .right {
         flex: 0.5;
-    
+        display: relative;
+
+        .wrapper {
+            width: 100%;
+            height: 100%;
+            padding-left: 150px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            h1 {
+            font-size: 60px;
+            font-weight: 500;
+            margin: 10px 0;
+            }
+
+            h2 {
+            font-weight: 500;
+            font-size: 35px;
+            }
+
+            h3 {
+            font-weight: 500;
+            font-size: 30px;
+            
+                span {
+                    font-size: 30px;
+                    color: #82b74b;
+                }
+            }
+
+        }
+        
+        a {
+            position: absolute;
+            text-decoration: none;
+            color: inherit;
+            bottom: 100px;
+            left: 70%;
+            animation: linkBlink 3s infinite
+        }
+
+        @keyframes linkBlink {
+            to {
+                opacity: 0%;
+            }
+        }
+
+
     }
 }
