--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,3 +1,84 @@
 .portfolio{
     background-color: #dac292;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 5%;
+
+    h1 {
+        font-size: 50px;
+    }
+
+    ul {
+        margin: 10px;
+        padding: 0;
+        list-style: none;
+        display: flex;
+   
+
+    li { 
+        font-size: 14px;
+        margin-right: 50px;
+        padding: 10px;
+        border-radius: 6px;
+
+        &.active {
+            background-color: #82b74b;
+            color: white;
+        }
+    }
+    }
+
+    .container  { 
+        width: 70%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        .item {
+            width: 250px;
+            height: 160px;
+            border-radius: 20px;
+            bottom: 1px solid lightgrey;
+            margin: 10px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #dac292;
+            position: relative;
+            transition: all 0.5s ease;
+            cursor: pointer;
+
+            h3 { 
+                position: absolute;
+                font-size: 20px;
+                opacity: 0;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                z-index: 2;
+            }
+
+            a {
+                text-decoration: white;
+            }
+
+            &:hover {
+                background-color:#82b74b;
+                color: white;
+                img {
+                    opacity: 0.2;
+                    z-index: 0;
+                }
+                h3 {
+                    opacity: 1;
+                }
+                
+            }
+        }
+    }
 }
